--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
+   
 }
+
+  
+
 
 /* salvamento de paletas de cores */
 
@@ -33,6 +38,92 @@
     background-repeat: no-repeat;
     background-size:contain;
     cursor: pointer;
+}
+
+/* background */
+
+.container-background{
+    width: 100%;
+    height: 550px;
+    background-image: url(/PROJETO_01/IMG/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* container frase */
+
+.container-frase{
+    width: 60%;
+    height: 130px;
+}
+
+.container-frase > h1{
+    font-size: 40px;
+    color: var(--vinho);
+}
+
+.container-frase > p{
+    color: var(--sinza-rosado);
+    font-weight: bold;
+    font-size: 18px;
+}
+
+input[type=button]{
+    width: 150px;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 15px;
+    cursor: pointer;
+    background-color: var(--sinza-rosado);
+
+}
+
+/* ANIMLÇÃO BOTÃO  */
+
+
+.expanding-border-button {
+    width: 150px;
+    height: 55px;
+    background-color: transparent;
+    color: var(--azul-teal-escuro); /* Cor do texto */
+    padding: 15px 30px;
+    font-size: 15px;
+    font-weight: bold;
+    border: 2px solid var(--azul-teal-escuro); /* Borda inicial */
+    border-radius: 30px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: color 0.4s, background-color 0.4s, box-shadow 0.4s; /* Suavidade nas transições */
+}
+
+.expanding-border-button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0%;
+    height: 100%;
+    background: var(--sinza-rosado); /* Cor de preenchimento ao passar o mouse */
+    z-index: -1;
+    transition: width 0.4s ease, left 0.4s ease;
+    border-radius: 30px;
+}
+
+.expanding-border-button:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.expanding-border-button:hover {
+    color: white; /* Muda a cor do texto para branco no hover */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Sombras para dar um efeito de elevação */
 }
 
 
