--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,8 +43,9 @@
 /* background */
 
 .container-background{
-    width: 100%;
+    width: 90%;
     height: 550px;
+    margin: 0 auto;
     background-image: url(/PROJETO_01/IMG/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -86,7 +87,7 @@ input[type=button]{
 /* ANIMLÇÃO BOTÃO  */
 
 
-.expanding-border-button {
+.botao-background {
     width: 150px;
     height: 55px;
     background-color: transparent;
@@ -103,7 +104,7 @@ input[type=button]{
     transition: color 0.4s, background-color 0.4s, box-shadow 0.4s; /* Suavidade nas transições */
 }
 
-.expanding-border-button::before {
+.botao-background::before {
     content: "";
     position: absolute;
     top: 0;
@@ -116,14 +117,35 @@ input[type=button]{
     border-radius: 30px;
 }
 
-.expanding-border-button:hover::before {
+.botao-background:hover::before {
     width: 100%;
     left: 0;
 }
 
-.expanding-border-button:hover {
+.botao-background:hover {
     color: white; /* Muda a cor do texto para branco no hover */
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Sombras para dar um efeito de elevação */
+}
+
+.container-chamada{
+    width: 90%;
+    height: 190px;
+    margin: 0 auto;
+    background-color: var(--azul-teal-escuro);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chamada-1{
+    width: 70%;
+    height: 55px;
+}
+
+.chamada-1 > p{
+    font-size: 19px;
+    color: var(--sinza-rosado);
+    text-align:center;
 }
 
 
@@ -167,8 +189,6 @@ input[type=button]{
         font-size: 15px;
     }
     
-
-
   }
   
 
